08-service_and_ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image: ymarchuk/goapp:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
#
# ------------   Liveness Probe   ----------------------
#
          livenessProbe:
            httpGet:
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
#
# ------------   Readiness Probe   ---------------------
#
          readinessProbe:
            httpGet:
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
            successThreshold: 1
