08-service_and_ingress/service-cip.yaml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  namespace: default
spec:
  type: ClusterIP # ClusterIP
  selector:
    app: goapp
  ports:
    - name : http
      port: 8080
      targetPort: 8080
      protocol: TCP
