08-service_and_ingress/ingress-cer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress-defcert
  namespace: default
  annotations: 
    kuberenetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - goapp.local
  rules:
    - host: goapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goapp-service
                port:
                  number: 8080
