08-service_and_ingress/ingress-cip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp-ingress
  namespace: default
  annotations: 
    kuberenetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
spec:
  rules:
    - host: goapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goapp-service
                port:
                  number: 8080
